tests/coverage/misc/fail/early_errors/003_const_without_initializer.js
// ECMA-262 §13.3.1 — every BindingIdentifier/BindingPattern in a `const`
// LexicalDeclaration MUST have an Initializer. `const x;` is a SyntaxError.
const x;
